packages/typ/tests/fixtures/diagnostics/0249_fun_locally_abstract_mismatch_01.ml.expected
File "0249_fun_locally_abstract_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0249_fun_locally_abstract_mismatch_01 is not a valid module name.

File "0249_fun_locally_abstract_mismatch_01.ml", line 1, characters 39-40:
1 | let bad_alpha (type a) (x : a) : int = x
                                           ^
Error: The value x has type a but an expression was expected of type int
